# no-scheule

./: .env  Cargo.toml
main/: Cargo.toml  main.rs
shared/: Cargo.toml  config.rs  lib.rs
student_system/: Cargo.toml
teacher_system/: Cargo.toml
teacher_system/application/use_cases/: course_management.rs  facility_management.rs  mod.rs  schedule_management.rs  teacher_queries.rs
teacher_system/domain/: mod.rs
teacher_system/domain/models/: course.rs  facilitie_available.rs  user.rs
teacher_system/domain/repositories/: course_repository.rs  facility_repository.rs  mod.rs  schedule_repository.rs  user_repository.rs
teacher_system/domain/services/: mod.rs  scheduling_service.rs
teacher_system/infrastructure/: error.rs  mod.rs  routes.rs
teacher_system/infrastructure/api_restful/: mod.rs  routes.rs
teacher_system/infrastructure/api_restful/controllers/: course_controller.rs  facility_controller.rs  schedule_controller.rs
teacher_system/infrastructure/controllers/: courses_controller.rs  mod.rs  schedules_controller.rs  teachers_controller.rs
teacher_system/infrastructure/database/entities/: sea_orm_active_enums.rs
teacher_system/infrastructure/database/queries/: facility_query.rs  schedule_query.rs  user_query.rs
teacher_system/infrastructure/supabase/: course_repo_impl.rs  mod.rs
