[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
teacher_system = { path = "../teacher_system" }
student_system = { path = "../student_system" }
dotenv = "0.15"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
supabase_rs = "0.4.3"
serde_json = "1.0"
http = "0.2"

[[bin]]
name = "scheduling_app"
path = "main.rs"
