[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
teacher_system = { path = "../teacher_system" }
student_system = { path = "../student_system" }
dotenv = "0.15"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
actix-web = "4.11.0"
actix-cors = "0.7.1"
env_logger = "0.11.8"

[[bin]]
name = "scheduling_app"
path = "main.rs"
